@@ -347,6 +347,8 @@ Release 2.1.0-beta - 2013-07-02
     HADOOP-9707. Fix register lists for crc32c inline assembly. (todd via
     kihwal)
 
+    HADOOP-9738. TestDistCh fails. (jing9 via kihwal)
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS AND RELATED JIRAS
 
     HADOOP-8924. Hadoop Common creating package-info.java must not depend on
